manifests/namespace.yaml

apiVersion: v1
kind: Namespace
metadata:
  name: elastic-system
  labels:
    app.kubernetes.io/name: elastic-system
    app.kubernetes.io/version: "1"
