manifests/elasticsearch-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch-service
  namespace: elastic-system
  labels:
    app: elasticsearch
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 9200
    targetPort: 9200
    protocol: TCP
  - name: transport
    port: 9300
    targetPort: 9300
    protocol: TCP
  selector:
    elasticsearch.k8s.elastic.co/cluster-name: elasticsearch
---
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch-loadbalancer
  namespace: elastic-system
  labels:
    app: elasticsearch
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
    service.beta.kubernetes.io/aws-load-balancer-internal: "true"
    service.beta.kubernetes.io/aws-load-balancer-backend-protocol: "tcp"
spec:
  type: LoadBalancer
  ports:
  - name: http
    port: 9200
    targetPort: 9200
    protocol: TCP
  selector:
    elasticsearch.k8s.elastic.co/cluster-name: elasticsearch
