manifests/kibana.yaml
apiVersion: v1
kind: Service
metadata:
  name: kibana-service
  namespace: elastic-system
  labels:
    app: kibana
spec:
  type: ClusterIP
  ports:
  - name: https
    port: 5601
    targetPort: 5601
    protocol: TCP
  selector:
    kibana.k8s.elastic.co/name: kibana
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kibana-ingress
  namespace: elastic-system
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/backend-protocol: HTTPS
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/certificate-arn: "arn:aws:acm:ap-northeast-2:365485194891:certificate/4b2094ef-fd6b-4ce1-ac47-9d10bf0e9590"
    alb.ingress.kubernetes.io/group.name: "elasticsearch-alb"
    # Kibana는 /api/status가 401/302가 나올 수 있어요. 인증 없는 /login으로 헬스체크 경로 변경.
    alb.ingress.kubernetes.io/healthcheck-path: "/login"
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTPS
spec:
  ingressClassName: alb
  rules:
  - host: kibana.nextaistore.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kibana-service
            port:
              number: 5601
